modified index.html file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ODIN PROJECT</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-</body>
+    <ul>
+        <li><a href="recipes/supernachos.html">SUPER NACHOS</a></li>
+        <li><a href="recipes/cheesesteak.html">PHILLY CHEESESTEAK</a></li>
+        <li><a href="recipes/guacamole.html">GUACAMOLe</a></li>
+      </ul>
+      <h2></h2>
 </html>
