modified index.html file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ODIN PROJECT</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
@@ -13,4 +15,5 @@
         <li><a href="recipes/guacamole.html">GUACAMOLe</a></li>
       </ul>
       <h2></h2>
+
 </html>
