--- a/recipes/cheesesteak.html
+++ b/recipes/cheesesteak.html
@@ -4,22 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheesesteak</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+      table {
+          width: 100%;
+          border-collapse: collapse;
+          
+      }
+      th, td {
+          padding: 8px;
+          text-align: left;
+          border: 1px solid #dddddd;
+      }
+      th {
+          background-color: #f2f2f2;
+      }
+  </style>
 </head>
 <body>
+  <div class="cheesy">
     <h1><a href="https://www.allrecipes.com/recipe/8537970/kansas-city-style-burnt-ends-philly-cheesesteak/">Kanas Style Philly Cheese Steak</a></h1>
-    <img src="C:\Users\bmano\OneDrive\Desktop\Odin Project\images\download.jpg" alt="cheesesteak">
+    <img src="C:\Users\bmano\OneDrive\Desktop\PROJECTS\Odin Project\images\2.jpg" alt="cheesesteak" height="350-400" width="350-400" >
     <p>Indulge in the bold and savory flavors of the Kansas City Style Philly Cheese Steak. This recipe features thinly sliced beef, caramelized onions, and melted cheese, all served on a soft hoagie roll. What sets this dish apart is the addition of Kansas City barbecue sauce, which infuses the meat with a smoky and tangy flavor that perfectly complements the richness of the cheese. Whether you're hosting a game day gathering or simply craving a hearty meal, the Kansas City Style Philly Cheese Steak is sure to satisfy your taste buds with its irresistible combination of savory ingredients and barbecue flair.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>3 ½ pounds beef chuck roast (should be very well-marbled)</li>
-        <li>3 tablespoons barbecue dry rub</li>
-        <li>½ cup Kansas City style BBQ sauce</li>
-        <li>4 sandwich or hoagie rolls</li>
-        <li>1 (8 ounce) container cheese whiz, or sliced cheese as needed</li>
-        <li>⅔ cup sautéed onions</li>
-        <li>⅔ cup chopped jarred pickled peppers</li>
-        <li>2 tablespoons sliced green onions</li>
-      </ul>
+  </div>
+    
+    <table>
+      <tr>
+          <th>Ingredient</th>
+          <th>Quantity</th>
+      </tr>
+      <tr>
+          <td>Beef chuck roast (very well-marbled)</td>
+          <td>3 ½ pounds</td>
+      </tr>
+      <tr>
+          <td>Barbecue dry rub</td>
+          <td>3 tablespoons</td>
+      </tr>
+      <tr>
+          <td>Kansas City style BBQ sauce</td>
+          <td>½ cup</td>
+      </tr>
+      <tr>
+          <td>Sandwich or hoagie rolls</td>
+          <td>4</td>
+      </tr>
+      <tr>
+          <td>Cheese whiz or sliced cheese</td>
+          <td>1 (8 ounce) container or as needed</td>
+      </tr>
+      <tr>
+          <td>Sautéed onions</td>
+          <td>⅔ cup</td>
+      </tr>
+      <tr>
+          <td>Chopped jarred pickled peppers</td>
+          <td>⅔ cup</td>
+      </tr>
+      <tr>
+          <td>Sliced green onions</td>
+          <td>2 tablespoons</td>
+      </tr>
+  </table>
       <h2>Directions</h2>
       <ul>
         <li>Preheat your grill with a griddle pan or flat top griddle to medium-high heat, aiming for a temperature range of 350-400 degrees Fahrenheit.</li>
