--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -4,23 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guacamole</title>
+    <style>
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        
+    }
+    th, td {
+        padding: 8px;
+        text-align: left;
+        border: 1px solid #dddddd;
+    }
+    th {
+        background-color: #f2f2f2;
+    }
+</style>
 </head>
 <body>
     <h1><a href="https://www.allrecipes.com/recipe/14231/guacamole/">Guacamole</a></h1>
-    <img src="C:\Users\bmano\OneDrive\Desktop\Odin Project\images\2.jpg" alt="guacamole">
+    <img src="C:\Users\bmano\OneDrive\Desktop\PROJECTS\Odin Project\images\download.jpg" alt="guacamole">
     <p>Indulge in the creamy, flavorful goodness of homemade guacamole. Made with ripe avocados, fresh lime juice, diced tomatoes, onions, cilantro, and a touch of garlic and cayenne pepper for a bit of heat, this guacamole recipe is a crowd-pleaser. Whether you're hosting a party, enjoying a snack, or looking for a versatile topping for your favorite Mexican dishes, this guacamole is sure to impress with its vibrant flavors and creamy texture. Whip up a batch in minutes and savor the irresistible taste of homemade guacamole.</p>
     <h2>Ingredients</h2>
-    <ul>
-       <li>3 avocados - peeled, pitted, and mashed</li>
-       <li>1 lime, juiced</li>
-       <li>1 teaspoon salt</li>
-       <li>2 roma (plum) tomatoes, diced</li>
-       <li>½ cup diced onion</li>
-       <li>3 tablespoons chopped fresh cilantro</li>
-       <li>1 teaspoon minced garlic</li>
-       <li>1 pinch ground cayenne pepper (Optional)</li>
     
-    </ul>
+<table>
+    <tr>
+      <th>Ingredient</th>
+      <th>Quantity</th>
+    </tr>
+    <tr>
+      <td>Avocados - peeled, pitted, and mashed</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <td>Lime, juiced</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td>Salt</td>
+      <td>1 teaspoon</td>
+    </tr>
+    <tr>
+      <td>Roma (plum) tomatoes, diced</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>Diced onion</td>
+      <td>½ cup</td>
+    </tr>
+    <tr>
+      <td>Chopped fresh cilantro</td>
+      <td>3 tablespoons</td>
+    </tr>
+    <tr>
+      <td>Minced garlic</td>
+      <td>1 teaspoon</td>
+    </tr>
+    <tr>
+      <td>Ground cayenne pepper (Optional)</td>
+      <td>1 pinch</td>
+    </tr>
+  </table>
     <h2>Directions</h2>
     <ul>
         <li>Peel, pit, and mash 3 avocados.</li>
