--- a/RECIPES_.html
+++ b/RECIPES_.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RECIPES</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="RECIPES_.css">
 </head>
 <body>
     <div class="recipes">
