--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ODIN PROJECT</title>
-
+    
+    <link rel="icon" href="C:\Users\bmano\OneDrive\Desktop\PROJECTS\Odin Project\images\icons8-cookbook-64.png"> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
