--- a/RECIPES_.html
+++ b/RECIPES_.html
@@ -11,17 +11,17 @@
         <h2>RECIPES</h2>
         <div class="box">
         <a href="recipes/supernachos.html" class="recipe-link">SUPER NACHOS</a>
-        <img src="C:\Users\bmano\OneDrive\Desktop\PROJECTS\Odin Project\images\SUPER NACHOS.png" height="220px" width="220px">
+        <img src="C:\Users\bmano\OneDrive\Desktop\PROJECTS\Odin Project\odin-recipes\SUPERNACHOS.png" height="220px" width="220px">
         <p>Layers of crunchy chips topped with gooey cheese, seasoned beef, zesty jalapenos, cool sour cream, and tangy salsa, creating a symphony of flavors and textures in every bite.</p>
         </div>
         <div class="box">
         <a href="recipes/cheesesteak.html" class="recipe-link">CHEESE STEAK</a>
-         <img src="C:\Users\bmano\OneDrive\Desktop\PROJECTS\Odin Project\images\CHEESE STEAK.png" height="220px" width="220px">  
+         <img src="C:\Users\bmano\OneDrive\Desktop\PROJECTS\Odin Project\odin-recipes\CHEESESTEAK.png" height="220px" width="220px">  
          <p>Tender beef, melted cheese, sautéed onions, and peppers piled high on a soft hoagie roll, delivering a satisfying combination of savory goodness and comforting indulgence.</p> 
         </div>
         <div class="box">
             <a href="recipes/guacamole.html" class="recipe-link">GUACAMOLE</a>
-        <img src="C:\Users\bmano\OneDrive\Desktop\PROJECTS\Odin Project\images\GUACAMOLE.png" height="220px" width="220px">
+        <img src="C:\Users\bmano\OneDrive\Desktop\PROJECTS\Odin Project\odin-recipes\GUACAMOLE.png" height="220px" width="220px">
         <p>Creamy avocado mashed with zesty lime juice, diced tomatoes, onions, and fresh cilantro, offering a refreshing and flavorful dip that enhances any dish with its vibrant taste and creamy texture.</p>
 
 
