--- a/recipes/cheesesteak.html
+++ b/recipes/cheesesteak.html
@@ -24,7 +24,7 @@
 <body>
   <div class="cheesy">
     <h1><a href="https://www.allrecipes.com/recipe/8537970/kansas-city-style-burnt-ends-philly-cheesesteak/">Kanas Style Philly Cheese Steak</a></h1>
-    <img src="C:\Users\bmano\OneDrive\Desktop\PROJECTS\Odin Project\images\2.jpg" alt="cheesesteak" height="350-400" width="350-400" >
+    <img src="C:\Users\bmano\OneDrive\Desktop\PROJECTS\Odin Project\odin-recipes\images\2.jpg" alt="cheesesteak" height="350-400" width="350-400" >
     <p>Indulge in the bold and savory flavors of the Kansas City Style Philly Cheese Steak. This recipe features thinly sliced beef, caramelized onions, and melted cheese, all served on a soft hoagie roll. What sets this dish apart is the addition of Kansas City barbecue sauce, which infuses the meat with a smoky and tangy flavor that perfectly complements the richness of the cheese. Whether you're hosting a game day gathering or simply craving a hearty meal, the Kansas City Style Philly Cheese Steak is sure to satisfy your taste buds with its irresistible combination of savory ingredients and barbecue flair.</p>
   </div>
     
