modofied guacamole.html

--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <h1><a href="https://www.allrecipes.com/recipe/14231/guacamole/">Guacamole</a></h1>
-    <img src="C:\Users\bmano\OneDrive\Desktop\PROJECTS\Odin Project\images\download.jpg" alt="guacamole">
+    <img src="C:\Users\bmano\OneDrive\Desktop\PROJECTS\Odin Project\odin-recipes\images\download.jpg" alt="guacamole">
     <p>Indulge in the creamy, flavorful goodness of homemade guacamole. Made with ripe avocados, fresh lime juice, diced tomatoes, onions, cilantro, and a touch of garlic and cayenne pepper for a bit of heat, this guacamole recipe is a crowd-pleaser. Whether you're hosting a party, enjoying a snack, or looking for a versatile topping for your favorite Mexican dishes, this guacamole is sure to impress with its vibrant flavors and creamy texture. Whip up a batch in minutes and savor the irresistible taste of homemade guacamole.</p>
     <h2>Ingredients</h2>
     
