--- a/recipes/supernachos.html
+++ b/recipes/supernachos.html
@@ -23,7 +23,7 @@
  
     <h1><a href="https://www.allrecipes.com/recipe/51147/super-nachos/"> Super Nachos</a></h1>
     
-    <img src="C:\Users\bmano\OneDrive\Desktop\PROJECTS\Odin Project\images\1.jpg" alt="super-nachos">
+    <img src="C:\Users\bmano\OneDrive\Desktop\PROJECTS\Odin Project\odin-recipes\images\1.jpg" alt="super-nachos">
     <p>Super Nachos are a mouthwatering combination of crispy tortilla chips topped with seasoned ground beef, melted cheese, diced tomatoes, sliced jalapeños, black olives, sour cream, and guacamole. This ultimate comfort food is perfect for parties, game nights, or any occasion when you want to enjoy a flavorful and satisfying snack.</p>
     <h2>Ingredients</h2>
       
